# vnotion

./: .gitignore
ai-engine/: .env.example  README.md  config.py  config.yaml  installer.py  main.py  pyproject.toml  requirements.txt  start.py  test_engine.py
ai-engine/graphs/: __init__.py  content_graph.py  database_graph.py
ai-engine/models/: anthropic.py  base.py  ollama.py  openai.py
ai-engine/scripts/: install_ollama.sh
ai-engine/services/: analysis.py  embeddings.py  generation.py
ai-engine/utils/: model_manager.py
vnotions-app/: README.md  nuxt.config.js  package-lock.json  package.json  tailwind.config.js
vnotions-app/app/: app.vue
vnotions-app/assets/css/: main.scss
vnotions-app/assets/css/themes/: dark.scss
vnotions-app/components/: AppLogo.vue
vnotions-app/components/database/: AddColumnModal.vue  AddGroupModal.vue  BoardCard.vue  ColumnHeader.vue  DatabaseCell.vue  DatabaseRow.vue  DatabaseToolbar.vue  DatabaseView.vue
vnotions-app/components/database/cells/: CheckboxCellDisplay.vue  CheckboxCellEdit.vue  DateCellDisplay.vue  DateCellEdit.vue  EmailCellDisplay.vue  EmailCellEdit.vue  FileCellDisplay.vue  FileCellEdit.vue  FormulaCellDisplay.vue  NumberCellDisplay.vue  NumberCellEdit.vue  PhoneCellDisplay.vue  PhoneCellEdit.vue  RelationCellDisplay.vue  RelationCellEdit.vue  SelectCellDisplay.vue  SelectCellEdit.vue  TextCellDisplay.vue  TextCellEdit.vue  UrlCellDisplay.vue  UrlCellEdit.vue
vnotions-app/components/database/views/: BoardView.vue  CalendarView.vue  GalleryView.vue  ListView.vue  TableView.vue  TimelineView.vue
vnotions-app/components/editor/: Editor.vue  EditorToolbar.vue  SlashCommands.vue  TipTapEditor.vue  ToolbarButton.vue  ToolbarColorPicker.vue  ToolbarDropdown.vue
vnotions-app/components/editor/blocks/: CalloutBlock.vue  CodeBlock.vue  ToggleBlock.vue
vnotions-app/components/git/: GitHistory.vue  GitStatus.vue
vnotions-app/components/import-export/: ExportDialog.vue  ImportDialog.vue
vnotions-app/components/layout/: PropertiesPanel.vue  Sidebar.vue  SidebarPageItem.vue  TopBar.vue
vnotions-app/components/pages/: PageCreator.vue  PageTree.vue  PageTreeItem.vue
vnotions-app/components/search/: SearchBox.vue  SearchResults.vue
vnotions-app/components/ui/: ContextMenu.vue
vnotions-app/composables/: useEditor.js
vnotions-app/electron/ipc/: files.js  settings.js  workspace.js
vnotions-app/electron/main/: main.js
vnotions-app/electron/preload/: preload.js
vnotions-app/layouts/: default.vue
vnotions-app/pages/: editor-demo.vue  git.vue  index.vue  search.vue
vnotions-app/pages/database/: [id].vue
vnotions-app/pages/page/: [id].vue
vnotions-app/scripts/: init-workspace.js
vnotions-app/stores/: databases.js  editor.js  git.js  pages.js  search.js  workspace.js
vnotions-app/utils/: database.js  git.js  import-export.js  page.js  search.js  uuid.js
